--- a/packages/api/src/main/resources/application.properties
+++ b/packages/api/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/some_source
+spring.datasource.username=smt
+spring.datasource.password=pswrd
+spring.jpa.hibernate.ddl-auto=update
+spring.main.banner-mode=off
+logging.level.root=warn
