--- a/packages/api/compose.yaml
+++ b/packages/api/compose.yaml
@@ -4,9 +4,8 @@ name: edupayroll
 
 services:
   db:
-    image: mariadb:10.8.3
+    image: mysql:5.7
     restart: always
-    command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_DATABASE: 'app'
       MYSQL_USER: 'user'
@@ -18,6 +17,7 @@ services:
       - '3306'
     volumes:
       - db-data:/var/lib/mysql
+    command: [ 'mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci' ]
 
 volumes:
   db-data:
