--- a/packages/api/src/main/resources/application.properties
+++ b/packages/api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/some_source
-spring.datasource.username=smt
-spring.datasource.password=pswrd
+spring.datasource.url=jdbc:mysql://localhost:3306/app
+spring.datasource.username=user
+spring.datasource.password=secret
 spring.jpa.hibernate.ddl-auto=update
 spring.main.banner-mode=off
 logging.level.root=warn
