--- a/packages/api/compose.yaml
+++ b/packages/api/compose.yaml
@@ -4,7 +4,7 @@ name: edupayroll
 
 services:
   db:
-    image: mysql:5.7
+    image: mariadb
     restart: always
     environment:
       MYSQL_DATABASE: 'app'
@@ -17,7 +17,6 @@ services:
       - '3306'
     volumes:
       - db-data:/var/lib/mysql
-    command: [ 'mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci' ]
 
 volumes:
   db-data:
