--- a/packages/api/src/main/resources/application.properties
+++ b/packages/api/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/app
+spring.datasource.url=jdbc:mariadb://localhost:3306/app
 spring.datasource.username=user
 spring.datasource.password=secret
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
 spring.main.banner-mode=off
 logging.level.root=warn
