--- a/packages/api/src/main/resources/application.properties
+++ b/packages/api/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=3000
+server.address=localhost
 spring.datasource.url=jdbc:mariadb://localhost:3306/app
 spring.datasource.username=user
 spring.datasource.password=secret
