feat(server): add context path

--- a/packages/api/src/main/resources/application.properties
+++ b/packages/api/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.main.banner-mode=off
 logging.level.root=warn
+server.servlet.context-path=/v1
