chore(web): eslint configuration

--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -7,8 +7,9 @@
     "skipLibCheck": true,
 
     /* Bundler mode */
+    "esModuleInterop": true,
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "allowImportingTsExtensions": false,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
