chore(server): change application properties

--- a/packages/api/src/main/resources/application.properties
+++ b/packages/api/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.datasource.password=secret
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.main.banner-mode=off
-logging.level.root=warn
+logging.level.root=error
 server.servlet.context-path=/v1
+spring.jackson.deserialization.fail-on-unknown-properties=true
