feat(web): add generated client from openapi

--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -24,7 +24,9 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": [
-    "src"
+    "src",
+    "types",
+    "scripts"
   ],
   "references": [
     {
