--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,13 +10,15 @@
     "lint:eslint": "eslint 'src/**/*.{ts,tsx}'",
     "lint": "tsc && yarn lint:eslint",
     "format": "prettier --write 'src/**/*.{ts,tsx}' && yarn lint:eslint --fix",
-    "format:check": "prettier -c 'src/**/*.{ts,tsx}'"
+    "format:check": "prettier -c 'src/**/*.{ts,tsx}'",
+    "generate:api": "node ./scripts/generate-api.js"
   },
   "dependencies": {
     "@mantine/core": "^7.5.3",
     "@mantine/hooks": "^7.5.3",
     "@mantine/notifications": "^7.5.3",
     "@tabler/icons-react": "^2.47.0",
+    "dotenv-flow": "^4.1.0",
     "react": "^18.2.0",
     "react-div-100vh": "^0.7.0",
     "react-dom": "^18.2.0",
@@ -24,6 +26,8 @@
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.13.4",
+    "@types/node": "^20.14.2",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
@@ -40,6 +44,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "prettier": "^3.2.5",
+    "rimraf": "^5.0.7",
     "sass": "^1.71.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
