chore(server): use env variables in application properties

--- a/packages/api/src/main/resources/application.properties
+++ b/packages/api/src/main/resources/application.properties
@@ -1,11 +1,16 @@
+# server configuration
 server.port=3000
 server.address=localhost
-spring.datasource.url=jdbc:mariadb://localhost:3306/app
-spring.datasource.username=user
-spring.datasource.password=secret
+# database configuration
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
+# hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
-spring.main.banner-mode=off
+# logging configuration
 logging.level.root=error
-server.servlet.context-path=/v1
+# spring other configuration
+spring.main.banner-mode=off
+spring.config.import=optional:file:.env[.properties]
 spring.jackson.deserialization.fail-on-unknown-properties=true
