--- a/packages/api/pom.xml
+++ b/packages/api/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-ses</artifactId>
+            <version>1.12.750</version>
+        </dependency>
     </dependencies>
 
     <build>
