feat(server): create email service

--- a/packages/api/src/main/resources/application.properties
+++ b/packages/api/src/main/resources/application.properties
@@ -5,11 +5,16 @@ server.address=localhost
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
+# email configuration
+mailer.from.address=${MAILER_FROM_ADDRESS}
+# aws configuration
+aws.access.key=${AWS_ACCESS_KEY_ID}
+aws.access.secret=${AWS_ACCESS_SECRET}
 # hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 # logging configuration
-logging.level.root=error
+logging.level.root=warn
 # spring other configuration
 spring.main.banner-mode=off
 spring.config.import=optional:file:.env[.properties]
