--- a/packages/api/pom.xml
+++ b/packages/api/pom.xml
@@ -75,6 +75,11 @@
             <artifactId>aws-java-sdk-ses</artifactId>
             <version>1.12.750</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>3.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
