chore(server): edit .env.sample file

--- a/packages/api/.env.sample
+++ b/packages/api/.env.sample
@@ -1,8 +1,18 @@
+# database configurations
 DATABASE_URL=
 DATABASE_USER=
 DATABASE_PASSWORD=
 
+# mailer configurations
+MAILER_FROM_NAME=
 MAILER_FROM_ADDRESS=
+MAILER_REPLY_TO_ADDRESS=
 
+# aws configurations
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+
+# app other configurations
+CLIENT_URL=
+SERVER_URL=
+CLIENT_REGISTER_COMPLETE_PATH=
