feat(server): add templates to email service

--- a/packages/api/src/main/resources/application.properties
+++ b/packages/api/src/main/resources/application.properties
@@ -6,7 +6,9 @@ spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
 # email configuration
+mailer.from.name=${MAILER_FROM_NAME}
 mailer.from.address=${MAILER_FROM_ADDRESS}
+mailer.reply.address=${MAILER_REPLY_TO_ADDRESS}
 # aws configuration
 aws.access.key=${AWS_ACCESS_KEY_ID}
 aws.access.secret=${AWS_ACCESS_SECRET}
@@ -15,7 +17,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 # logging configuration
 logging.level.root=warn
+# mustache configuration
+spring.mustache.prefix=classpath:/templates/
+spring.mustache.suffix=.mustache
 # spring other configuration
 spring.main.banner-mode=off
 spring.config.import=optional:file:.env[.properties]
 spring.jackson.deserialization.fail-on-unknown-properties=true
+# app other configuration
+app.client-url=${CLIENT_URL}
+app.server-url=${SERVER_URL}
+app.client-register-complete-path=${CLIENT_REGISTER_COMPLETE_PATH}
