--- a/packages/api/compose.yaml
+++ b/packages/api/compose.yaml
@@ -17,6 +17,21 @@ services:
       - '3306'
     volumes:
       - db-data:/var/lib/mysql
+  test-db:
+    image: mariadb
+    restart: always
+    environment:
+      MYSQL_DATABASE: app
+      MYSQL_USER: user
+      MYSQL_PASSWORD: secret
+      MYSQL_ROOT_PASSWORD: secret
+    ports:
+      - '3307:3306'
+    expose:
+      - '3306'
+    volumes:
+      - test-db-data:/var/lib/mysql
 
 volumes:
   db-data:
+  test-db-data:
