feat(server): add reset password mustache template

--- a/packages/api/.env.sample
+++ b/packages/api/.env.sample
@@ -15,5 +15,5 @@ AWS_SECRET_ACCESS_KEY=
 # app other configurations
 CLIENT_URL=
 SERVER_URL=
+CLIENT_RESET_PASSWORD_PATH=
 CLIENT_REGISTER_COMPLETE_PATH=
-RESET_PASSWORD_PATH=
