--- a/packages/api/src/main/resources/application.properties
+++ b/packages/api/src/main/resources/application.properties
@@ -27,4 +27,5 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 # app other configuration
 app.client-url=${CLIENT_URL}
 app.server-url=${SERVER_URL}
+app.client-reset-password-path=${CLIENT_RESET_PASSWORD_PATH}
 app.client-register-complete-path=${CLIENT_REGISTER_COMPLETE_PATH}
