--- a/packages/api/.env.sample
+++ b/packages/api/.env.sample
@@ -15,5 +15,6 @@ AWS_SECRET_ACCESS_KEY=
 # app other configurations
 CLIENT_URL=
 SERVER_URL=
+CLIENT_LOGO_PATH=
 CLIENT_REGISTER_COMPLETE_PATH=
 CLIENT_RESET_PASSWORD_COMPLETE_PATH=
