--- a/packages/api/src/main/resources/application.properties
+++ b/packages/api/src/main/resources/application.properties
@@ -27,5 +27,6 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 # app other configuration
 app.client-url=${CLIENT_URL}
 app.server-url=${SERVER_URL}
+app.client-logo-path=${CLIENT_LOGO_PATH}
 app.client-register-complete-path=${CLIENT_REGISTER_COMPLETE_PATH}
 app.client-reset-password-complete-path=${CLIENT_RESET_PASSWORD_COMPLETE_PATH}
