--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -16,17 +16,23 @@
   "dependencies": {
     "@mantine/core": "^7.5.3",
     "@mantine/hooks": "^7.5.3",
-    "@mantine/notifications": "^7.5.3",
+    "@mantine/notifications": "^7.11.1",
     "@tabler/icons-react": "^2.47.0",
+    "@tanstack/react-query": "^5.40.1",
     "dotenv-flow": "^4.1.0",
+    "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-div-100vh": "^0.7.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.13.4",
+    "@tanstack/eslint-plugin-query": "^5.35.6",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.14.2",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
@@ -47,6 +53,6 @@
     "rimraf": "^5.0.7",
     "sass": "^1.71.1",
     "typescript": "^5.2.2",
-    "vite": "^5.1.4"
+    "vite": "5.2.6"
   }
 }
