--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -21,10 +21,12 @@
     "@tanstack/react-query": "^5.40.1",
     "dotenv-flow": "^4.1.0",
     "formik": "^2.4.6",
+    "i18next": "^23.11.5",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-div-100vh": "^0.7.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.1",
     "yup": "^1.4.0"
