--- a/packages/api/src/main/resources/application.properties
+++ b/packages/api/src/main/resources/application.properties
@@ -13,7 +13,7 @@ mailer.reply.address=${MAILER_REPLY_TO_ADDRESS}
 aws.access.key=${AWS_ACCESS_KEY_ID}
 aws.access.secret=${AWS_ACCESS_SECRET}
 # hibernate configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.open-in-view=false
 # logging configuration
 logging.level.root=warn
