chore(server): add rabbitmq packages and config

--- a/packages/api/.env.sample
+++ b/packages/api/.env.sample
@@ -3,6 +3,12 @@ DATABASE_URL=
 DATABASE_USER=
 DATABASE_PASSWORD=
 
+# rabbitmq configurations
+RABBITMQ_HOST=
+RABBITMQ_PORT=
+RABBITMQ_USER=
+RABBITMQ_PASSWORD=
+
 # mailer configurations
 MAILER_FROM_NAME=
 MAILER_FROM_ADDRESS=
