--- a/packages/api/compose.yaml
+++ b/packages/api/compose.yaml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 name: edupayroll
 
 services:
@@ -31,7 +29,21 @@ services:
       - '3306'
     volumes:
       - test-db-data:/var/lib/mysql
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: user
+      RABBITMQ_DEFAULT_PASS: secret
+    volumes:
+      - rabbitmq_log:/var/log/rabbitmq
+      - rabbitmq_data:/var/lib/rabbitmq
 
 volumes:
   db-data:
   test-db-data:
+  rabbitmq_log:
+  rabbitmq_data:
