fix(api): fix name of access secret key env variable

--- a/packages/api/.env.sample
+++ b/packages/api/.env.sample
@@ -16,7 +16,7 @@ MAILER_REPLY_TO_ADDRESS=
 
 # aws configurations
 AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_SECRET=
 
 # app other configurations
 CLIENT_URL=
