--- a/packages/api/src/main/resources/application.properties
+++ b/packages/api/src/main/resources/application.properties
@@ -16,7 +16,7 @@ mailer.from.address=${MAILER_FROM_ADDRESS}
 mailer.reply.address=${MAILER_REPLY_TO_ADDRESS}
 # aws configuration
 aws.access.key=${AWS_ACCESS_KEY_ID}
-aws.access.secret=${AWS_ACCESS_SECRET}
+aws.access.secret=${AWS_ACCESS_KEY_SECRET}
 # hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
