feat(api): create storage service with aws s3

--- a/packages/api/src/main/resources/application.properties
+++ b/packages/api/src/main/resources/application.properties
@@ -15,6 +15,8 @@ mailer.from.name=${MAILER_FROM_NAME}
 mailer.from.address=${MAILER_FROM_ADDRESS}
 mailer.reply.address=${MAILER_REPLY_TO_ADDRESS}
 # aws configuration
+aws.s3.bucket=${AWS_S3_BUCKET}
+aws.s3.region=${AWS_S3_REGION}
 aws.access.key=${AWS_ACCESS_KEY_ID}
 aws.access.secret=${AWS_ACCESS_KEY_SECRET}
 # hibernate configuration
