--- a/packages/api/.env.sample
+++ b/packages/api/.env.sample
@@ -15,6 +15,8 @@ MAILER_FROM_ADDRESS=
 MAILER_REPLY_TO_ADDRESS=
 
 # aws configurations
+AWS_S3_BUCKET=
+AWS_S3_REGION=
 AWS_ACCESS_KEY_ID=
 AWS_ACCESS_KEY_SECRET=
 
