--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,10 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint:eslint": "eslint 'src/**/*.{ts,tsx}'",
     "lint": "tsc && yarn lint:eslint",
-    "format": "prettier --write 'src/**/*.{ts,tsx}' && yarn lint:eslint --fix",
-    "format:check": "prettier -c 'src/**/*.{ts,tsx}'",
+    "lint:eslint": "eslint 'src/**/*.{ts,tsx}'",
     "generate:api": "node ./scripts/generate-api.js"
   },
   "dependencies": {
@@ -34,29 +32,24 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^3.7.2",
+    "@eslint-react/eslint-plugin": "^1.14.2",
     "@openapitools/openapi-generator-cli": "^2.13.4",
-    "@tanstack/eslint-plugin-query": "^5.35.6",
+    "@tanstack/eslint-plugin-query": "^5.57.2",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.14.2",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "@typescript-eslint/parser": "^8.7.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^8.56.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "prettier": "^3.2.5",
+    "eslint": "^9.11.1",
+    "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.12",
     "rimraf": "^5.0.7",
     "sass": "^1.71.1",
-    "typescript": "^5.2.2",
+    "typescript": "5.5.4",
     "vite": "5.2.6"
   }
 }
