--- a/packages/api/src/main/resources/application-dev.properties
+++ b/packages/api/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 # hibernate configuration
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 # logging configuration
 logging.level.root=warn
 # spring configuration
