--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,6 +18,7 @@
     "@tabler/icons-react": "^2.47.0",
     "@tanstack/react-query": "^5.40.1",
     "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
     "debounce": "^2.1.0",
     "dotenv-flow": "^4.1.0",
     "formik": "^2.4.6",
